--- a/src/Ben.Demystifier/Ben.Demystifier.csproj
+++ b/src/Ben.Demystifier/Ben.Demystifier.csproj
@@ -11,6 +11,7 @@
     <RepositoryType>git</RepositoryType>
     <IncludeSource>true</IncludeSource>
     <DebugType>embedded</DebugType>
+	<PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -27,6 +28,7 @@
       <Version>1.6.0</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.3" Condition="'$(TargetFramework)' != 'netstandard2.1'" />
+	<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 
   <ItemGroup Label="TestInternalsVisibleTo">
