--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,5 @@
 ﻿<Project>
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 </Project>
