GH actions ContinuousIntegrationBuild

--- a/directory.build.props
+++ b/directory.build.props
@@ -1,4 +1,5 @@
 ﻿<Project>
-  <PropertyGroup>
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 </Project>
