--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -39,7 +39,13 @@ jobs:
 
       - name: Get .NET information
         run: dotnet --info
+        
+      - name: Clean
+      - run: dotnet clean -v m && dotnet build -c ${{ matrix.config }} && dotnet nuget locals all --clear
 
+      - name: Build
+      - run: dotnet build -c ${{ matrix.config }}
+      
       - name: "Test"
         run: dotnet test -c ${{ matrix.config }}
         
