--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -41,13 +41,13 @@ jobs:
         run: dotnet --info
         
       - name: Clean
-      - run: dotnet clean -v m
+        run: dotnet clean -v m
         
       - name: Clear cache
-      - run: dotnet nuget locals all --clear
+        run: dotnet nuget locals all --clear
 
       - name: Build
-      - run: dotnet build -c ${{ matrix.config }}
+        run: dotnet build -c ${{ matrix.config }}
       
       - name: "Test"
         run: dotnet test -c ${{ matrix.config }}
