--- a/sample/FSharpStackTrace/FSharpStackTrace.fsproj
+++ b/sample/FSharpStackTrace/FSharpStackTrace.fsproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Ply" Version="0.1.7" />
+      <PackageReference Include="Ply" Version="0.3.1" />
     </ItemGroup>
 
 </Project>
