--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -22,6 +22,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup .NET SDK (v6.0)
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+            dotnet-version: '6.0.100-preview.7.21379.14'
+
       - name: Get .NET information
         run: dotnet --info
 
